# abides-jpmc-public

./: environment.yml
abides-core/abides_core/: kernel.py
abides-gym/abides_gym/: __init__.py
abides-gym/abides_gym/envs/: __init__.py  markets_environment.py
abides-gym/abides_gym/experimental_agents/: __init__.py
abides-markets/abides_markets/: order_book.py
abides-markets/abides_markets/agents/: exchange_agent.py  (+1 more)
abides-multi-exchange/: setup.py
experiments/: __init__.py
experiments/Configs/: cdormsc01.py
experiments/Oracle/: data_oracle.py
experiments/RL Agent/: README.md
gym-crypto-markets/: setup.py
gym-crypto-markets/gym_crypto_markets/: __init__.py
my-experiments/: README.md  pyproject.toml
my-experiments/my_experiments/agents/: __init__.py  base_mr.py  base_se_triple_barrier.py
my-experiments/my_experiments/agents_multi/: __init__.py  base_me_triple_barrier.py  base_mr_multi.py  me_ppo.py  rl_dqn_01.py
my-experiments/my_experiments/archive/archive/: exec.py
my-experiments/my_experiments/exec/: base_config.yaml  base_config_bear.yaml  exec_multi.py  ppo_train.yaml  run_gym_simulation.py  run_simulation.sh
my-experiments/my_experiments/exec/configs/: dqn_train.yaml
my-experiments/my_experiments/log_analysis/: indiv_trade_perf.py  log_structure.py  logs_profit.py  logs_profit_multi.py  read_e_diag.py  read_logs.py
my_experiments/: README.md  pyproject.toml
my_experiments/gym_crypto_markets/: __init__.py  setup.py
notebooks/: Demo_ABIDES_multi_exchange.ipynb
util/plotting/: chart_fundamental.py  liquidity_telemetry.py
(+79 files in other folders)
